# mm-ap-rando

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
scripts/: MMGenerate.py  package_mod.py
src/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
test/: CMakeLists.txt  main.cpp
